--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <img class="el31" src="img/main/heroimg.png" alt="img">
                         </div>
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-xl-6 offset-xl-0 col-md-6 offset-md-6">
                         <div class="herosect__descr">
                             <h1>
                                 <span class="darktext">Wireless</span>
@@ -457,7 +457,7 @@
                     <div class="latest-news">
                         <p class="sect-subtitle">Latest News</p>
                         <div class="row">
-                            <div class="col-xl-6">
+                            <div class="col-xl-6 col-lg-6">
                                 <div class="latnewbig">
                                     <a href="#" class="imgwrap">
                                         <img src="img/main/img1.jpg" alt="img">
@@ -471,7 +471,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-5 offset-xl-1">
+                            <div class="col-xl-5 offset-xl-1  col-lg-6">
                                 <div class="latnewlist">
                                     <a href="#" class="latnewlist__item">
                                         <h6>
@@ -547,30 +547,30 @@
         <section class="contactsection">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-7">
+                    <div class="col-xl-7 col-lg-6">
                         <div class="contactsection__form">
                             <p class="title">Contact us</p>
                             <form action="#">
                                 <div class="row">
-                                    <div class="col-lg-6">
+                                    <div class="col-md-6">
                                         <div class="inputfield">
                                             <label for="name">Full name</label>
                                             <input type="text" placeholder="Full name..." id="name">
                                         </div>
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-md-6">
                                         <div class="inputfield">
                                             <label for="email">Email</label>
                                             <input type="email" placeholder="Email..." id="email">
                                         </div>
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-md-6">
                                         <div class="inputfield">
                                             <label for="tel">Phone Number</label>
                                             <input type="number" placeholder="Phone Number..." id="tel">
                                         </div>
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-md-6">
                                         <div class="inputfield">
                                             <label for="tel1">Phone Number</label>
                                             <input type="number" placeholder="Phone Number..." id="tel1">
@@ -590,7 +590,35 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-xl-4 offset-xl-1"></div>
+                    <div class="col-xl-4 col-lg-6 offset-xl-1">
+                        <div class="contactsection__info">
+                            <ul>
+                                <li>
+                                    <p>
+                                        Office phone
+                                    </p>
+                                    <a href="tel:0322500300">0322 500 300</a>
+                                </li>
+                                <li>
+                                    <p>
+                                        Business email
+                                    </p>
+                                    <a href="email:info@skytel.ge">info@skytel.ge</a>
+                                </li>
+                                <li>
+                                    <p>
+                                        Office location
+                                    </p>
+                                    <a href="#">Guramishvili Ave 23a, Tbilisi</a>
+                                </li>
+                            </ul>
+                            <a target="_blank"
+                                href="https://www.google.com/maps/place/23+Guramishvili+Ave,+T'bilisi,+%D0%93%D1%80%D1%83%D0%B7%D1%96%D1%8F/@41.7562241,44.7851005,17z/data=!3m1!4b1!4m5!3m4!1s0x40447281dff32dc9:0xff9ffcb80f3f0368!8m2!3d41.7562201!4d44.7876754?entry=ttu&g_ep=EgoyMDI1MDMxMi4wIKXMDSoASAFQAw%3D%3D"
+                                class="contactsection__map">
+                                <img src="img/main/map.jpg" alt="img">
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
