--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="row g-0 align-items-center">
                 <div class="header__logo">
                     <a href="#">
-                        <img src="img/general/logo.png" alt="logo">
+                        <img src="img/general/logo.svg" alt="logo">
                     </a>
                 </div>
                 <div class="header__nav">
@@ -87,24 +87,42 @@
         <div class="bluerowserv">
             <div class="container">
                 <div class="d-flex flex-wrap justify-content-center">
-                    <div class="bluerowserv__item">
-                        <img src="img/main/ic1.svg" alt="icon">
+                    <a href="#" class="bluerowserv__item">
+                        <!-- <img src="img/main/ic1.svg" alt="icon"> -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="29" height="28" viewBox="0 0 29 28" fill="none">
+                            <path
+                                d="M20.3707 3.09484C19.394 3.09484 18.5847 3.89531 18.5847 4.8614C18.5847 5.19263 18.6684 5.46865 18.8358 5.74468C17.9986 6.98679 16.994 9.11219 16.7428 12.2037H15.794V4.00572C16.4637 3.7297 16.9102 3.09484 16.9102 2.34957C16.9102 1.38348 16.1009 0.583008 15.1242 0.583008C14.1474 0.583008 13.3381 1.38348 13.3381 2.34957C13.3381 3.09484 13.8126 3.7297 14.4544 4.00572V12.2037H13.5056C13.2544 9.11219 12.2498 6.98679 11.4126 5.74468C11.5521 5.46865 11.6637 5.19263 11.6637 4.8614C11.6637 3.89531 10.8544 3.09484 9.87768 3.09484C8.90094 3.09484 8.09163 3.89531 8.09163 4.8614C8.09163 5.82749 8.90094 6.62796 9.87768 6.62796C10.0451 6.62796 10.2126 6.60036 10.38 6.54515C11.0777 7.64925 11.9428 9.49862 12.194 12.1761H11.4684C11.1056 12.1761 10.7986 12.4797 10.7986 12.8385V16.8685C10.7986 17.6414 10.1847 18.2486 9.40326 18.2486H7.00326C6.64047 18.2486 6.3335 18.5523 6.3335 18.9111C6.3335 19.2699 6.64047 19.5735 7.00326 19.5735H9.40326C10.9102 19.5735 12.1381 18.359 12.1381 16.8685V13.5286H18.1102V16.8961C18.1102 21.6437 14.2033 25.5081 9.40326 25.5081H7.00326C6.64047 25.5081 6.3335 25.8117 6.3335 26.1705C6.3335 26.5294 6.64047 26.833 7.00326 26.833H9.40326C14.9288 26.833 19.4219 22.389 19.4219 16.9237V12.8661C19.4219 12.5073 19.1149 12.2037 18.7521 12.2037H18.0544C18.3056 9.52623 19.1707 7.64925 19.8684 6.57276C20.0358 6.62796 20.2033 6.65556 20.3707 6.65556C21.3474 6.65556 22.1567 5.85509 22.1567 4.889C22.1567 3.89531 21.3474 3.09484 20.3707 3.09484Z"
+                                fill="white" />
+                            <path
+                                d="M10.8547 24.0171C10.9106 24.0171 10.9385 24.0171 10.9943 23.9895C13.5059 23.4375 15.5989 21.5881 16.4082 19.1591C16.5199 18.8278 16.3245 18.4414 15.9896 18.331C15.6268 18.2206 15.264 18.4138 15.1524 18.745C14.4827 20.7324 12.7803 22.2506 10.7152 22.6922C10.3524 22.775 10.1292 23.1338 10.2129 23.4651C10.2687 23.8239 10.5478 24.0171 10.8547 24.0171Z"
+                                fill="white" />
+                        </svg>
                         <p>
                             Fiber-Optic Internet
                         </p>
-                    </div>
-                    <div class="bluerowserv__item">
-                        <img src="img/main/ic2.svg" alt="icon">
+                    </a>
+                    <a href="#" class="bluerowserv__item">
+                        <!-- <img src="img/main/ic2.svg" alt="icon"> -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="29" height="28" viewBox="0 0 29 28" fill="none">
+                            <path
+                                d="M20.4231 12.6832C18.6494 11.5621 16.5998 10.9676 14.508 10.9676C12.4163 10.9676 10.3666 11.5621 8.59298 12.6832C8.25671 12.8978 7.97281 13.1866 7.76253 13.5278C7.55225 13.8691 7.42103 14.254 7.3787 14.6538C7.33097 15.0678 7.3765 15.4874 7.51187 15.8811C7.64725 16.2748 7.86897 16.6325 8.16042 16.9273L8.26987 17.038C8.70253 17.4655 9.26547 17.7325 9.86721 17.7956C10.4689 17.8588 11.0741 17.7143 11.5844 17.3857C12.4649 16.8438 13.4759 16.5572 14.5067 16.5572C15.5376 16.5572 16.5485 16.8438 17.4291 17.3857C17.8676 17.6598 18.3727 17.8057 18.8883 17.8072C19.2351 17.8089 19.5788 17.7406 19.8992 17.6062C20.2196 17.4719 20.5102 17.2742 20.754 17.0248L20.8635 16.9142C21.1549 16.6193 21.3766 16.2617 21.512 15.8679C21.6474 15.4742 21.6929 15.0546 21.6452 14.6406C21.6003 14.2424 21.4671 13.8596 21.2555 13.5207C21.0439 13.1817 20.7593 12.8955 20.4231 12.6832ZM19.7456 15.8103L19.6362 15.921C19.4525 16.0983 19.2142 16.2068 18.9611 16.2284C18.708 16.25 18.4552 16.1833 18.2447 16.0395C17.1183 15.3453 15.8246 14.9781 14.5054 14.9781C13.1863 14.9781 11.8926 15.3453 10.7662 16.0395C10.5561 16.1831 10.3037 16.2497 10.051 16.2281C9.79836 16.2065 9.5606 16.0981 9.37731 15.921L9.26787 15.8103C9.14189 15.6834 9.04597 15.5293 8.9873 15.3596C8.92863 15.1899 8.90874 15.0089 8.92912 14.8303C8.9425 14.6624 8.99446 14.4999 9.08086 14.3558C9.16726 14.2118 9.28572 14.0901 9.42682 14.0004C10.9508 13.0384 12.7114 12.5284 14.508 12.5284C16.3047 12.5284 18.0653 13.0384 19.5893 14.0004C19.7272 14.0882 19.8435 14.2068 19.9293 14.3469C20.0151 14.4871 20.0682 14.6452 20.0843 14.8092C20.106 14.9891 20.0867 15.1716 20.028 15.3428C19.9693 15.514 19.8727 15.6694 19.7456 15.7971V15.8103ZM26.2991 7.03752C22.9429 4.34952 18.7818 2.89641 14.5002 2.91721C10.2161 2.89934 6.05379 4.35722 2.69877 7.0507C2.39904 7.2913 2.15273 7.59297 1.97585 7.9361C1.79898 8.27923 1.69548 8.65614 1.6721 9.04236C1.64747 9.43315 1.70433 9.82481 1.839 10.192C1.97366 10.5591 2.18313 10.8936 2.45383 11.1736C2.92526 11.6616 3.55828 11.9565 4.23149 12.0017C4.90471 12.0469 5.57074 11.8393 6.10188 11.4186C8.50512 9.54685 11.4535 8.5318 14.4872 8.5318C17.5209 8.5318 20.4693 9.54685 22.8725 11.4186C23.3999 11.8355 24.0599 12.0429 24.7281 12.0017C25.3963 11.9604 26.0264 11.6734 26.4997 11.1947L26.5258 11.171C26.8012 10.8918 27.0151 10.5569 27.1535 10.1882C27.2918 9.81955 27.3514 9.42545 27.3283 9.03182C27.3052 8.64491 27.2015 8.2673 27.0241 7.92365C26.8468 7.58001 26.5997 7.27806 26.2991 7.03752ZM25.4209 10.0487L25.3975 10.0724C25.1944 10.28 24.9229 10.4049 24.6346 10.4234C24.3463 10.4418 24.0614 10.3526 23.834 10.1725C21.1543 8.08478 17.8664 6.95256 14.4833 6.95256C11.1002 6.95256 7.81227 8.08478 5.13254 10.1725C4.90421 10.3516 4.61875 10.4395 4.33047 10.4196C4.04219 10.3997 3.77121 10.2733 3.56909 10.0645C3.45134 9.94314 3.36011 9.79811 3.30131 9.63882C3.24251 9.47953 3.21744 9.30953 3.22773 9.13983C3.23658 8.97466 3.28021 8.81331 3.35571 8.66656C3.4312 8.51981 3.53682 8.39105 3.6655 8.2889C6.74606 5.8172 10.5675 4.48011 14.5002 4.49789C18.4308 4.47771 22.2511 5.81101 25.3323 8.27836C25.4615 8.38069 25.5674 8.50984 25.6429 8.65709C25.7184 8.80434 25.7618 8.96627 25.7701 9.13193C25.7784 9.30092 25.7517 9.4698 25.6915 9.6277C25.6314 9.7856 25.5392 9.92902 25.4209 10.0487ZM14.5002 25.0836C15.2496 25.0836 15.9757 24.8208 16.5549 24.3401C17.1341 23.8594 17.5305 23.1906 17.6767 22.4475C17.8228 21.7045 17.7095 20.9332 17.3562 20.2651C17.0029 19.597 16.4314 19.0734 15.7391 18.7835C15.0468 18.4936 14.2764 18.4555 13.5594 18.6754C12.8423 18.8954 12.2229 19.36 11.8066 19.9899C11.3904 20.6199 11.203 21.3763 11.2765 22.1302C11.3501 22.8842 11.6799 23.589 12.2098 24.1247C12.5098 24.4298 12.8667 24.6717 13.2599 24.8363C13.6531 25.0009 14.0747 25.085 14.5002 25.0836ZM13.3146 20.605C13.5886 20.3277 13.9492 20.1549 14.335 20.1163C14.7209 20.0776 15.108 20.1755 15.4305 20.3931C15.753 20.6108 15.9908 20.9348 16.1034 21.3098C16.2161 21.6849 16.1966 22.0879 16.0482 22.4501C15.8999 22.8123 15.6319 23.1112 15.29 23.296C14.948 23.4807 14.5533 23.5399 14.173 23.4633C13.7927 23.3868 13.4505 23.1793 13.2046 22.8761C12.9588 22.573 12.8245 22.1931 12.8247 21.8011C12.8263 21.5797 12.8711 21.3608 12.9565 21.1569C13.0419 20.953 13.1663 20.7682 13.3224 20.6129L13.3146 20.605Z"
+                                fill="white" />
+                        </svg>
                         <p>
                             Wireless Internet
                         </p>
-                    </div>
-                    <div class="bluerowserv__item">
-                        <img src="img/main/ic3.svg" alt="icon">
+                    </a>
+                    <a href="#" class="bluerowserv__item">
+                        <!-- <img src="img/main/ic3.svg" alt="icon"> -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none">
+                            <path class="strokecolor"
+                                d="M6.93286 24.4997H21.6508M12.4521 20.7876V24.4997M16.1316 20.7876V24.4997M3.7133 20.7876H24.8704C25.632 20.7876 26.2502 20.1639 26.2502 19.3955V5.47505C26.2502 4.70664 25.632 4.08301 24.8704 4.08301H3.7133C2.95165 4.08301 2.3335 4.70664 2.3335 5.47505V19.3955C2.3335 20.1639 2.95165 20.7876 3.7133 20.7876Z"
+                                stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
                         <p>
                             TV
                         </p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -458,18 +476,18 @@
                         <p class="sect-subtitle">Latest News</p>
                         <div class="row">
                             <div class="col-xl-6 col-lg-6">
-                                <div class="latnewbig">
-                                    <a href="#" class="imgwrap">
+                                <a href="#" class="latnewbig">
+                                    <div class="imgwrap">
                                         <img src="img/main/img1.jpg" alt="img">
-                                    </a>
+                                    </div>
                                     <div class="descr">
                                         <h5>We and digital institute are already partners</h5>
-                                        <a href="#">
+                                        <span class="link">
                                             Read more
                                             <img src="img/main/link-arrow.svg" alt="img">
-                                        </a>
+                                        </span>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="col-xl-5 offset-xl-1  col-lg-6">
                                 <div class="latnewlist">
@@ -513,7 +531,13 @@
                                 <div class="text-end">
                                     <a href="#" class="moremews">
                                         More News
-                                        <img src="img/main/link-arrow.svg" alt="img">
+                                        <!-- <img src="img/main/link-arrow.svg" alt="img"> -->
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                            viewBox="0 0 20 20" fill="none">
+                                            <path
+                                                d="M11.1265 7.22553C11.0585 7.16074 11.0039 7.0826 10.9661 6.99579C10.9283 6.90897 10.9079 6.81525 10.9063 6.72022C10.9046 6.6252 10.9217 6.5308 10.9565 6.44268C10.9914 6.35455 11.0432 6.2745 11.1089 6.20729C11.1747 6.14009 11.253 6.08711 11.3392 6.05151C11.4254 6.01591 11.5178 5.99843 11.6107 6.00011C11.7037 6.00179 11.7954 6.02259 11.8803 6.06127C11.9652 6.09995 12.0416 6.15572 12.105 6.22526L15.7975 9.99987C15.9272 10.1326 16 10.3124 16 10.5C16 10.6876 15.9272 10.8674 15.7975 11.0001L12.105 14.7747C12.0416 14.8443 11.9652 14.9001 11.8803 14.9387C11.7954 14.9774 11.7037 14.9982 11.6107 14.9999C11.5178 15.0016 11.4254 14.9841 11.3392 14.9485C11.253 14.9129 11.1747 14.8599 11.1089 14.7927C11.0432 14.7255 10.9914 14.6454 10.9565 14.5573C10.9217 14.4692 10.9046 14.3748 10.9063 14.2798C10.9079 14.1847 10.9283 14.091 10.9661 14.0042C11.0039 13.9174 11.0585 13.8393 11.1265 13.7745L13.6374 11.2077H4.69234C4.50872 11.2077 4.33262 11.1332 4.20278 11.0004C4.07294 10.8677 4 10.6877 4 10.5C4 10.3123 4.07294 10.1323 4.20278 9.99955C4.33262 9.86683 4.50872 9.79226 4.69234 9.79226H13.6374L11.1265 7.22553Z"
+                                                fill="#247DC0" />
+                                        </svg>
                                     </a>
                                 </div>
                             </div>
@@ -628,7 +652,7 @@
         <div class="footer__topline">
             <div class="container">
                 <div class="d-flex">
-                    <a href="#" class="footer__logo"><img src="img/general/footer-logo.png" alt="logo"></a>
+                    <a href="#" class="footer__logo"><img src="img/general/logo-footer.svg" alt="logo"></a>
                     <ul>
                         <li>
                             <a href="#" target="_blank">
