--- a/userarea.html
+++ b/userarea.html
@@ -17,7 +17,7 @@
             <div class="row g-0 align-items-center">
                 <div class="header__logo">
                     <a href="#">
-                        <img src="img/general/logo.png" alt="logo">
+                        <img src="img/general/logo.svg" alt="logo">
                     </a>
                 </div>
                 <div class="header__nav">
@@ -282,7 +282,7 @@
         <div class="footer__topline">
             <div class="container">
                 <div class="d-flex">
-                    <a href="#" class="footer__logo"><img src="img/general/footer-logo.png" alt="logo"></a>
+                    <a href="#" class="footer__logo"><img src="img/general/logo-footer.svg" alt="logo"></a>
                     <ul>
                         <li>
                             <a href="#" target="_blank">
