--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,7 @@
                 <div class="recentposts">
                     <p class="title">Recent blog posts</p>
                     <div class="row">
-                        <div class="col-xl-4">
+                        <div class="col-lg-4 col-sm-6">
                             <a href="#" class="recpost-item">
                                 <div class="imgwrap">
                                     <img src="img/blog/img2.jpg" alt="img">
@@ -94,7 +94,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-xl-4">
+                        <div class="col-lg-4 col-sm-6">
                             <a href="#" class="recpost-item">
                                 <div class="imgwrap">
                                     <img src="img/blog/img3.jpg" alt="img">
@@ -120,7 +120,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-xl-4">
+                        <div class="col-lg-4 col-sm-6">
                             <a href="#" class="recpost-item">
                                 <div class="imgwrap">
                                     <img src="img/blog/img4.jpg" alt="img">
@@ -146,7 +146,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-xl-4">
+                        <div class="col-lg-4 col-sm-6">
                             <a href="#" class="recpost-item">
                                 <div class="imgwrap">
                                     <img src="img/blog/img5.jpg" alt="img">
@@ -172,6 +172,137 @@
                                 </div>
                             </a>
                         </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <a href="#" class="recpost-item">
+                                <div class="imgwrap">
+                                    <img src="img/blog/img6.jpg" alt="img">
+                                </div>
+                                <div class="description">
+                                    <svg class="arrimg" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
+                                        viewBox="0 0 24 25" fill="none">
+                                        <path
+                                            d="M6.29 18.3976C6.38296 18.4913 6.49356 18.5657 6.61542 18.6165C6.73728 18.6672 6.86799 18.6934 7 18.6934C7.13201 18.6934 7.26272 18.6672 7.38458 18.6165C7.50644 18.5657 7.61704 18.4913 7.71 18.3976L16 10.0976V15.6876C16 15.9528 16.1054 16.2071 16.2929 16.3947C16.4804 16.5822 16.7348 16.6876 17 16.6876C17.2652 16.6876 17.5196 16.5822 17.7071 16.3947C17.8946 16.2071 18 15.9528 18 15.6876V7.68756C18 7.42234 17.8946 7.16799 17.7071 6.98045C17.5196 6.79292 17.2652 6.68756 17 6.68756H9C8.73478 6.68756 8.48043 6.79292 8.29289 6.98045C8.10536 7.16799 8 7.42234 8 7.68756C8 7.95278 8.10536 8.20713 8.29289 8.39467C8.48043 8.5822 8.73478 8.68756 9 8.68756H14.59L6.29 16.9776C6.19627 17.0705 6.12188 17.1811 6.07111 17.303C6.02034 17.4248 5.9942 17.5555 5.9942 17.6876C5.9942 17.8196 6.02034 17.9503 6.07111 18.0721C6.12188 18.194 6.19627 18.3046 6.29 18.3976Z"
+                                            fill="#247DC0" />
+                                    </svg>
+                                    <h5>Sytel Wireless Internet now available in the Akhmet District!</h5>
+                                    <p>
+                                        A new location has been added to the Skytel wireless Internet coverage area!
+                                    </p>
+                                    <div class="shares">
+                                        <p>
+                                            <img src="img/blog/shares.svg" alt="share">
+                                            8 shares
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <a href="#" class="recpost-item">
+                                <div class="imgwrap">
+                                    <img src="img/blog/img7.jpg" alt="img">
+                                </div>
+                                <div class="description">
+                                    <svg class="arrimg" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
+                                        viewBox="0 0 24 25" fill="none">
+                                        <path
+                                            d="M6.29 18.3976C6.38296 18.4913 6.49356 18.5657 6.61542 18.6165C6.73728 18.6672 6.86799 18.6934 7 18.6934C7.13201 18.6934 7.26272 18.6672 7.38458 18.6165C7.50644 18.5657 7.61704 18.4913 7.71 18.3976L16 10.0976V15.6876C16 15.9528 16.1054 16.2071 16.2929 16.3947C16.4804 16.5822 16.7348 16.6876 17 16.6876C17.2652 16.6876 17.5196 16.5822 17.7071 16.3947C17.8946 16.2071 18 15.9528 18 15.6876V7.68756C18 7.42234 17.8946 7.16799 17.7071 6.98045C17.5196 6.79292 17.2652 6.68756 17 6.68756H9C8.73478 6.68756 8.48043 6.79292 8.29289 6.98045C8.10536 7.16799 8 7.42234 8 7.68756C8 7.95278 8.10536 8.20713 8.29289 8.39467C8.48043 8.5822 8.73478 8.68756 9 8.68756H14.59L6.29 16.9776C6.19627 17.0705 6.12188 17.1811 6.07111 17.303C6.02034 17.4248 5.9942 17.5555 5.9942 17.6876C5.9942 17.8196 6.02034 17.9503 6.07111 18.0721C6.12188 18.194 6.19627 18.3046 6.29 18.3976Z"
+                                            fill="#247DC0" />
+                                    </svg>
+                                    <h5>Skytel became a partner of the "People Behind Business"</h5>
+                                    <p>
+                                        Skytel became a partner of the "People Behind Business" event, where 55
+                                        companies took part...
+                                    </p>
+                                    <div class="shares">
+                                        <p>
+                                            <img src="img/blog/shares.svg" alt="share">
+                                            5 shares
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <a href="#" class="recpost-item">
+                                <div class="imgwrap">
+                                    <img src="img/blog/img8.jpg" alt="img">
+                                </div>
+                                <div class="description">
+                                    <svg class="arrimg" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
+                                        viewBox="0 0 24 25" fill="none">
+                                        <path
+                                            d="M6.29 18.3976C6.38296 18.4913 6.49356 18.5657 6.61542 18.6165C6.73728 18.6672 6.86799 18.6934 7 18.6934C7.13201 18.6934 7.26272 18.6672 7.38458 18.6165C7.50644 18.5657 7.61704 18.4913 7.71 18.3976L16 10.0976V15.6876C16 15.9528 16.1054 16.2071 16.2929 16.3947C16.4804 16.5822 16.7348 16.6876 17 16.6876C17.2652 16.6876 17.5196 16.5822 17.7071 16.3947C17.8946 16.2071 18 15.9528 18 15.6876V7.68756C18 7.42234 17.8946 7.16799 17.7071 6.98045C17.5196 6.79292 17.2652 6.68756 17 6.68756H9C8.73478 6.68756 8.48043 6.79292 8.29289 6.98045C8.10536 7.16799 8 7.42234 8 7.68756C8 7.95278 8.10536 8.20713 8.29289 8.39467C8.48043 8.5822 8.73478 8.68756 9 8.68756H14.59L6.29 16.9776C6.19627 17.0705 6.12188 17.1811 6.07111 17.303C6.02034 17.4248 5.9942 17.5555 5.9942 17.6876C5.9942 17.8196 6.02034 17.9503 6.07111 18.0721C6.12188 18.194 6.19627 18.3046 6.29 18.3976Z"
+                                            fill="#247DC0" />
+                                    </svg>
+                                    <h5>Skytel Fiber optical Internet - in Tsiksidziri!</h5>
+                                    <p>
+                                        Skytel's optical Internet coverage has expanded once again, and now you can
+                                        enjoy high-speed...
+                                    </p>
+                                    <div class="shares">
+                                        <p>
+                                            <img src="img/blog/shares.svg" alt="share">
+                                            12 shares
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <a href="#" class="recpost-item">
+                                <div class="imgwrap">
+                                    <img src="img/blog/img9.jpg" alt="img">
+                                </div>
+                                <div class="description">
+                                    <svg class="arrimg" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
+                                        viewBox="0 0 24 25" fill="none">
+                                        <path
+                                            d="M6.29 18.3976C6.38296 18.4913 6.49356 18.5657 6.61542 18.6165C6.73728 18.6672 6.86799 18.6934 7 18.6934C7.13201 18.6934 7.26272 18.6672 7.38458 18.6165C7.50644 18.5657 7.61704 18.4913 7.71 18.3976L16 10.0976V15.6876C16 15.9528 16.1054 16.2071 16.2929 16.3947C16.4804 16.5822 16.7348 16.6876 17 16.6876C17.2652 16.6876 17.5196 16.5822 17.7071 16.3947C17.8946 16.2071 18 15.9528 18 15.6876V7.68756C18 7.42234 17.8946 7.16799 17.7071 6.98045C17.5196 6.79292 17.2652 6.68756 17 6.68756H9C8.73478 6.68756 8.48043 6.79292 8.29289 6.98045C8.10536 7.16799 8 7.42234 8 7.68756C8 7.95278 8.10536 8.20713 8.29289 8.39467C8.48043 8.5822 8.73478 8.68756 9 8.68756H14.59L6.29 16.9776C6.19627 17.0705 6.12188 17.1811 6.07111 17.303C6.02034 17.4248 5.9942 17.5555 5.9942 17.6876C5.9942 17.8196 6.02034 17.9503 6.07111 18.0721C6.12188 18.194 6.19627 18.3046 6.29 18.3976Z"
+                                            fill="#247DC0" />
+                                    </svg>
+                                    <h5>Sytel Wireless Internet now available in the Akhmet District!</h5>
+                                    <p>
+                                        A new location has been added to the Skytel wireless Internet coverage area!
+                                    </p>
+                                    <div class="shares">
+                                        <p>
+                                            <img src="img/blog/shares.svg" alt="share">
+                                            8 shares
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <a href="#" class="recpost-item">
+                                <div class="imgwrap">
+                                    <img src="img/blog/img10.jpg" alt="img">
+                                </div>
+                                <div class="description">
+                                    <svg class="arrimg" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
+                                        viewBox="0 0 24 25" fill="none">
+                                        <path
+                                            d="M6.29 18.3976C6.38296 18.4913 6.49356 18.5657 6.61542 18.6165C6.73728 18.6672 6.86799 18.6934 7 18.6934C7.13201 18.6934 7.26272 18.6672 7.38458 18.6165C7.50644 18.5657 7.61704 18.4913 7.71 18.3976L16 10.0976V15.6876C16 15.9528 16.1054 16.2071 16.2929 16.3947C16.4804 16.5822 16.7348 16.6876 17 16.6876C17.2652 16.6876 17.5196 16.5822 17.7071 16.3947C17.8946 16.2071 18 15.9528 18 15.6876V7.68756C18 7.42234 17.8946 7.16799 17.7071 6.98045C17.5196 6.79292 17.2652 6.68756 17 6.68756H9C8.73478 6.68756 8.48043 6.79292 8.29289 6.98045C8.10536 7.16799 8 7.42234 8 7.68756C8 7.95278 8.10536 8.20713 8.29289 8.39467C8.48043 8.5822 8.73478 8.68756 9 8.68756H14.59L6.29 16.9776C6.19627 17.0705 6.12188 17.1811 6.07111 17.303C6.02034 17.4248 5.9942 17.5555 5.9942 17.6876C5.9942 17.8196 6.02034 17.9503 6.07111 18.0721C6.12188 18.194 6.19627 18.3046 6.29 18.3976Z"
+                                            fill="#247DC0" />
+                                    </svg>
+                                    <h5>Skytel Fiber optical Internet - in Tsiksidziri!</h5>
+                                    <p>
+                                        Skytel's optical Internet coverage has expanded once again, and now you can
+                                        enjoy high-speed...
+                                    </p>
+                                    <div class="shares">
+                                        <p>
+                                            <img src="img/blog/shares.svg" alt="share">
+                                            12 shares
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button class="loadmore">Loading more...</button>
                     </div>
                 </div>
             </div>
