--- a/sitemap.html
+++ b/sitemap.html
@@ -18,6 +18,8 @@
             <li><a href="index.html" target="_blank">Main page</a></li>
             <li><a href="userarea.html" target="_blank">User area page</a></li>
             <li><a href="blog.html" target="_blank">Blog</a></li>
+            <li><a href="blog-single.html" target="_blank">Blog single</a></li>
+            <li><a href="campaigns.html" target="_blank">Campaigns page</a></li>
         </ul>
     </div>
 
