--- a/campaigns.html
+++ b/campaigns.html
@@ -55,13 +55,13 @@
     <main class="main">
         <section class="topsect">
             <div class="container">
-                <div class="topsect__inner">
-                    <img src="img/campaigns/hero.jpg" alt="Top background">
+                <div class="topsect__inner" style="background-color: #BDE2F5;">
                     <div class="topsect__descr">
                         <h1>
                             Campaigns
                         </h1>
                     </div>
+                    <img src="img/campaigns/hero_image.png" alt="Top background">
                 </div>
             </div>
         </section>
