--- a/sitemap.html
+++ b/sitemap.html
@@ -20,6 +20,8 @@
             <li><a href="blog.html" target="_blank">Blog</a></li>
             <li><a href="blog-single.html" target="_blank">Blog single</a></li>
             <li><a href="campaigns.html" target="_blank">Campaigns page</a></li>
+            <li><a href="campaigns-single.html" target="_blank">Campaigns page single</a></li>
+            <!-- <li><a href="products-services.html" target="_blank">Products and Services page</a></li> -->
         </ul>
     </div>
 
