--- a/sitemap.html
+++ b/sitemap.html
@@ -22,6 +22,7 @@
             <li><a href="campaigns.html" target="_blank">Campaigns page</a></li>
             <li><a href="campaigns-single.html" target="_blank">Campaigns page single</a></li>
             <li><a href="products-services.html" target="_blank">Products and Services page</a></li>
+            <li><a href="about-us.html" target="_blank">About Us/Vacancies page </a></li>
         </ul>
     </div>
 
