--- a/sitemap.html
+++ b/sitemap.html
@@ -24,6 +24,7 @@
             <li><a href="products-services.html" target="_blank">Products and Services page</a></li>
             <li><a href="about-us.html" target="_blank">About Us page</a></li>
             <li><a href="contact.html" target="_blank">Contact page</a></li>
+            <li><a href="coverage-map.html" target="_blank">Coverage Map page</a></li>
         </ul>
     </div>
 
